--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "private": true,
   "name": "lfg2019",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "doc": "jsdoc --configure .jsdoc.json .",
     "lint": "eslint --ext .js,.jsx,.jsdoc --fix .",
+    "serve": "node ./backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
