--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "doc": "jsdoc --configure .jsdoc.json .",
     "lint": "eslint --ext .js,.jsx,.jsdoc --fix .",
-    "serve-web": "http-server ./web",
+    "serve-web": "http-server ./web -o -c-1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
