--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "eslint": "^5.15.3",
     "http-server": "^0.11.1",
     "jsdoc": "^3.5.5"
+  },
+  "dependencies": {
+    "qrcode": "^1.3.3"
   }
 }
