--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsdoc": "^3.5.5"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1"
   }
 }
