--- a/userapp/package.json
+++ b/userapp/package.json
@@ -23,6 +23,8 @@
     "jsdoc": "^3.5.5"
   },
   "dependencies": {
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "qrcode": "^1.3.3"
   }
 }
